# kserve

./: .gitignore  .pre-commit-config.yaml  Makefile  Makefile.tools.mk  go.sum  kserve-deps.env  ruff.toml
charts/kserve-resources/templates/: clusterstoragecontainer.yaml
hack/setup/quick-install/: kserve-knative-mode-dependency-install.sh  kserve-knative-mode-full-install-helm.sh  kserve-standard-mode-dependency-install.sh  kserve-standard-mode-full-install-helm.sh  llmisvc-dependency-install.sh  llmisvc-full-install-helm.sh
python/: .gitignore  aiffairness.Dockerfile  artexplainer.Dockerfile  huggingface_server.Dockerfile  huggingface_server_cpu.Dockerfile  lgb.Dockerfile  paddle.Dockerfile  pmml.Dockerfile  predictiveserver.Dockerfile  pyproject.toml  sklearn.Dockerfile  storage-initializer.Dockerfile  xgb.Dockerfile
python/aiffairness/: Makefile  pyproject.toml
python/artexplainer/: Makefile  pyproject.toml
python/custom_model/: pyproject.toml
python/custom_tokenizer/: pyproject.toml
python/custom_transformer/: pyproject.toml
python/huggingfaceserver/: Makefile  pyproject.toml
python/huggingfaceserver/huggingfaceserver/: encoder_model.py  generative_model.py  utils.py
python/huggingfaceserver/huggingfaceserver/vllm/: utils.py  vllm_model.py
python/huggingfaceserver/tests/: test_model.py  test_vllm_generative.py
python/kserve/: Makefile  pyproject.toml
python/kserve/kserve/: logging.py  model_server.py
python/kserve/kserve/api/: kserve_client.py
python/kserve/kserve/protocol/: dataplane.py
python/kserve/kserve/protocol/rest/: server.py
python/kserve/kserve/protocol/rest/multiprocess/: server.py
python/kserve/kserve/protocol/rest/openai/types/: __init__.py
python/kserve/kserve/utils/: numpy_codec.py
python/kserve/test/: test_server.py
python/lgbserver/: Makefile  pyproject.toml
python/lgbserver/lgbserver/: model.py
python/lgbserver/lgbserver/example_model/model/: model.bst
python/paddleserver/: Makefile  pyproject.toml
python/pmmlserver/: Makefile  pyproject.toml
python/pmmlserver/pmmlserver/: model.py
python/predictiveserver/: Makefile  pyproject.toml
python/predictiveserver/predictiveserver/: model.py
python/sklearnserver/: Makefile  pyproject.toml
python/sklearnserver/sklearnserver/: model.py
python/sklearnserver/sklearnserver/example_models/joblib/model/: model.joblib
python/sklearnserver/sklearnserver/example_models/pickle/model/: model.pickle
python/sklearnserver/sklearnserver/example_models/pkl/model/: model.pkl
python/storage/: README.md  pyproject.toml
python/storage/kserve_storage/: kserve_storage.py  logging.py
python/storage/test/: test_azure_storage.py  test_gcs_storage.py  test_mlflow_storage.py  test_s3_storage.py  test_storage.py
python/test_resources/graph/error_404_isvc/: pyproject.toml
python/test_resources/graph/success_200_isvc/: pyproject.toml
python/xgbserver/: Makefile  pyproject.toml
python/xgbserver/xgbserver/: model.py
python/xgbserver/xgbserver/example_model/bst_model/: model.bst
python/xgbserver/xgbserver/example_model/json_model/: model.json
