[project]
authors = [
    {name = "Dan Sun", email = "dsun20@bloomberg.net"},
]
license = {text = "Apache-2.0"}
requires-python = "<3.13,>=3.10"
dependencies = [
    "kserve>=0.16.0",
]
name = "custom_tokenizer"
version = "0.16.0"
description = "Custom Tokenizer Examples. Not intended for use outside KServe Frameworks Images."


[tool.uv.sources]
kserve = { workspace = true }
