[project]
authors = [
    {name = "Dan Sun", email = "dsun20@bloomberg.net"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<3.14"
dependencies = [
    "kserve[llm]>=0.16.0",
    "kserve-storage>=0.16.0",
    "transformers>=4.53.2",
    "accelerate<2.0.0,>=1.6.0",
    "bitsandbytes>=0.45.3",
    "modelscope<2.0.0,>=1.16.0",
    "setuptools>=70.0.0",
]
name = "huggingfaceserver"
version = "0.16.0"
description = "Model Server implementation for huggingface. Not intended for use outside KServe Frameworks Images."
readme = "README.md"


[tool.uv.sources]
kserve = { workspace = true }
kserve-storage = { workspace = true }
