[project]
authors = [
    {name = "The KServe Authors", email = "dsun20@bloomberg.net"},
    {name = "The KServe Authors", email = "ellisbigelow@google.com"},
    {name = "The KServe Authors", email = "hejinchi@cn.ibm.com"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<3.13"
dependencies = [
    "uvicorn[standard]<1.0.0,>=0.30.6",
    "fastapi>=0.115.3,<0.122.0",
    "starlette==0.49.1",
    "cloudevents<2.0.0,>=1.6.2",
    "six<2.0.0,>=1.16.0",
    "kubernetes>=23.3.0",
    "python-dateutil<3.0.0,>=2.8.0",
    "numpy<3.0.0,>=1.26.0",
    "psutil<6.0.0,>=5.9.6",
    "grpcio<2.0.0,>=1.73.0",
    "grpcio-tools<2.0.0,>=1.73.0",
    "grpc-interceptor<1.0.0,>=0.15.4",
    "protobuf<7.0.0,>=6.33.5",
    "prometheus-client<1.0.0,>=0.20.0",
    "orjson<4.0.0,>=3.10.15",
    "httpx<1.0.0,>=0.27.2",
    "timing-asgi<1.0.0,>=0.3.0",
    "tabulate<1.0.0,>=0.9.0",
    "pandas<3.0.0,>=2.2.0",
    "pydantic<3.0.0,>=2.5.0",
    "pyyaml<7.0.0,>=6.0.0",
    "urllib3>=2.6.0", # CVE-2025-66418 https://github.com/urllib3/urllib3/security/advisories/GHSA-gm62-xv2j-4w53
    "aiohttp>=3.13.3", # CVE-2025-69223 AIOHTTP's HTTP Parser auto_decompress feature is vulnerable to zip bomb
    "h11>=0.16.0", # CVE-2025-43859 h11 accepts some malformed Chunked-Encoding bodies
]
name = "kserve"
version = "0.16.0"
description = "KServe Python SDK"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
repository = "https://github.com/kserve/kserve/tree/master/python/kserve"

[project.optional-dependencies]
storage = [
    "kserve-storage==0.16.0"
]
logging = [
    "asgi-logger<1.0.0,>=0.1.0",
]
ray = [
    "ray[serve]>=2.43.0",
]
llm = [
    "vllm==0.15.1; sys_platform == 'linux'",
]


[tool.uv.sources]
kserve-storage = { workspace = true }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
