[project]
authors = [
    {name = "Lin Yiming", email = "linyiming@ainnovation.com"},
]
license = {text = "Apache-2.0"}
requires-python = "<3.13,>=3.10"
dependencies = [
    "kserve>=0.16.0",
    "kserve-storage>=0.16.0",
    "lightgbm[scikit-learn]~=4.6.0",
    "pandas<3.0.0,>=2.2.0",
]
name = "lgbserver"
version = "0.16.0"
description = "Model Server implementation for LightGBM. Not intended for use outside KServe Frameworks Images."
readme = "README.md"


[tool.uv.sources]
kserve = { workspace = true }
kserve-storage = { workspace = true }
