[project]
authors = [
    {name = "Zhengyuan Zhang", email = "zhangzhengyuan0604@gmail.com"},
]
license = {text = "Apache-2.0"}
requires-python = "<3.13,>=3.10"
dependencies = [
    "kserve>=0.16.0",
    "kserve-storage>=0.16.0",
    "paddlepaddle>=2.6.1,<=3.0.0; platform_system != 'Windows'",
    "setuptools>=70.0.0",
]
name = "paddleserver"
version = "0.16.0"
description = "Model Server implementation for Paddle. Not intended for use outside KServe Frameworks Images"
readme = "README.md"


[tool.uv.sources]
kserve = { workspace = true }
kserve-storage = { workspace = true }
