[project]
authors = [
    {name = "AnyISalIn", email = "anyisalin@gmail.com"},
]
license = {text = "Apache-2.0"}
requires-python = "<3.13,>=3.10"
dependencies = [
    "kserve>=0.16.0",
    "kserve-storage>=0.16.0",
    "jpmml-evaluator~=0.10.3",
    "setuptools>=70.0.0",
]
name = "pmmlserver"
version = "0.16.0"
description = "Model Server implementation for PMML. Not intended for use outside KServe Frameworks Images."
readme = "README.md"


[tool.uv.sources]
kserve = { workspace = true }
kserve-storage = { workspace = true }
