[project]
authors = [
    {name = "Jooho Lee", email = "ljhiyh@gmail.com"},
]
license = {text = "Apache-2.0"}
requires-python = "<3.13,>=3.10"
dependencies = [
    "kserve>=0.16.0",
    "kserve-storage>=0.16.0",
    # Framework-specific model servers
    "sklearnserver>=0.16.0",
    "xgbserver>=0.16.0",
    "lgbserver>=0.16.0",
]
name = "predictiveserver"
version = "0.16.0"
description = "Unified Predictive Model Server supporting scikit-learn, LightGBM, and XGBoost for KServe."
readme = "README.md"


[tool.uv.sources]
kserve = { workspace = true }
kserve-storage = { workspace = true }
sklearnserver = { workspace = true }
xgbserver = { workspace = true }
lgbserver = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
