[project]
authors = [
    {name = "singhan", email = "singhan@us.ibm.com"},
]
license = {text = "Apache-2.0"}
requires-python = "<3.13,>=3.10"
dependencies = [
    "kserve>=0.16.0",
    "kserve-storage>=0.16.0",
    "scikit-learn~=1.5.1",
    "joblib<2.0.0,>=1.4.0",
    "pandas<3.0.0,>=2.2.0",
]
name = "sklearnserver"
version = "0.16.0"
description = "Model Server implementation for scikit-learn. Not intended for use outside KServe Frameworks Images."
readme = "README.md"


[tool.uv.sources]
kserve = { workspace = true }
kserve-storage = { workspace = true }
