[project]
authors = [
    {name = "Ellis Tarn", email = "ellisbigelow@google.com"},
]
license = {text = "Apache-2.0"}
requires-python = "<3.13,>=3.10"
dependencies = [
    "kserve>=0.16.0",
    "kserve-storage>=0.16.0",
    "xgboost~=2.1.1",
]
name = "xgbserver"
version = "0.16.0"
description = "Model Server implementation for XGBoost. Not intended for use outside KServe Frameworks Images."
readme = "README.md"


[tool.uv.sources]
kserve = { workspace = true }
kserve-storage = { workspace = true }
